<resources>
    <string name="app_name">Galerija</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_meni">JELOVNIK</string>
    <string name="menu_kuhinja">PIĆA</string>
    <string name="menu_enterijer">ENTERIJER</string>
    <string name="menu_dostava">DOSTAVA &amp; REZERVACIJE</string>
    <string name="menu_o_nama">O NAMA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>