<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:visible="false"/>
        <item
            android:id="@+id/nav_meni"
            android:title="@string/menu_meni" />
        <item
            android:id="@+id/nav_kuhinja"
            android:title="@string/menu_kuhinja" />
        <item
            android:id="@+id/nav_enterijer"
            android:title="@string/menu_enterijer" />
        <item
            android:id="@+id/nav_dostava"
            android:title="@string/menu_dostava" />
        <item
            android:id="@+id/nav_o_nama"
            android:title="@string/menu_o_nama" />

    </group>
</menu>